--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -19,6 +19,7 @@
 <br />
 <div>
 <% books.forEach(book => { %>
+  <a href="/books/<%= book.id %>">Edit</a>
 <img height="150" width="100" src="<%= book.coverImagePath %>">
 <% }) %>
 </div>
